some extra modifications to fix indexes

--- a/src/main/asciidoc/project/osgi/osgi.adoc
+++ b/src/main/asciidoc/project/osgi/osgi.adoc
@@ -1,4 +1,10 @@
 = OSGi
+:doctype: book
+:sectnums:
+:toc: left
+:icons: font
+:experimental:
+:sourcedir: .
 
 :leveloffset: 1
 include::integration_with_karaf.adoc[]
