--- a/src/main/asciidoc/product/book_info.adoc
+++ b/src/main/asciidoc/product/book_info.adoc
@@ -10,7 +10,7 @@ xref:fallback_content/legal_notice.adoc[Legal Notice]
 
 === Abstract
 
-The Transactions Overview Guide contains information on how to use {PRODUCT};
+The Transactions Overview Guide contains information on how to use {productName};
 to develop applications that use transaction technology to manage business processes.
 This document covers functionality that is available within both the Narayana community version and 
 is also available within the Red Hat JBoss EAP product.
