--- a/src/main/asciidoc/product/book_info.adoc
+++ b/src/main/asciidoc/product/book_info.adoc
@@ -8,7 +8,7 @@ include::author_group.adoc[]
 
 xref:fallback_content/legal_notice.adoc[Legal Notice]
 
-=== Abstract
+*Abstract*
 
 The Transactions Overview Guide contains information on how to use {productName};
 to develop applications that use transaction technology to manage business processes.
