--- a/src/main/asciidoc/product/txbridge_guide/txbridge_guide.adoc
+++ b/src/main/asciidoc/product/txbridge_guide/txbridge_guide.adoc
@@ -7,22 +7,15 @@
 :experimental:
 :sourcedir: .
 
-:leveloffset: 1
+:leveloffset: +2
 include::introduction.adoc[]
-:leveloffset: 0
 
-:leveloffset: 1
 include::transaction_bridge_architecture.adoc[]
-:leveloffset: 0
 
-:leveloffset: 1
 include::using_the_transaction_bridge.adoc[]
-:leveloffset: 0
 
-:leveloffset: 1
 include::known_limitations.adoc[]
-:leveloffset: 0
 
-:leveloffset: 1
 include::design_notes.adoc[]
-:leveloffset: 0
+
+:leveloffset: -2
